# taskinsight

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  HANDOFF.md  HANDOFF_v2.md  PRD_TaskInsight_MVP.md  PRD_TaskView_MVP.md  TaskInsight_Spec.md  TaskInsight_Spec_v2.md  TaskInsight_Spec_v3.md  docker-compose.yml  index.md  insight.md  nginx.conf  skills-lock.json  taskinsight_handoff_20260526.md
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/versions/: 0001_raw_redmine.py  0002_mart.py  0003_mvp.py
backend/app/: config.py  scheduler.py
backend/app/analytics/: dashboard.py
backend/app/api/: main.py
backend/app/api/routers/: connectors.py  dashboard.py  flow.py  insights.py  reports.py
backend/app/collector/: redmine_collector.py
backend/app/connectors/: base.py  registry.py
backend/app/connectors/redmine/: connector.py
backend/app/etl/: populate.py
backend/app/narrator/: issue_explainer.py  weekly_report.py
backend/app/schemas/: auth.py  common.py  issues.py
backend/app/scripts/: create_test_data.py  migrate_from_redmine.py  seed.py
docs/: API_SPEC.md  BUSINESS_RULES.md  CONTEXT.md  DOMAIN.md  INFRA_SPEC.md  INTEGRATION_SPEC.md  MIGRATION_PLAN.md  MONITORING.md  NON_FUNCTIONAL_REQUIREMENTS.md  RELEASE_CHECKLIST.md  SCHEMA.md  SECURITY_SPEC.md  TEST_SCENARIOS.md  UI_SPEC.md
docs/adr/: 001-integrated-architecture.md  002-auth-jwt.md  003-realtime-sse.md  004-file-storage.md
frontend/: Dockerfile  package-lock.json  package.json
frontend/app/: globals.css  (+1 more)
samples/: issues.csv  projects.csv  time_entries.csv  users.csv
(+16 files in other folders)
