[project]
name = "taskinsight-backend"
version = "0.2.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "psycopg[binary]>=3.1.0",
    "alembic>=1.13.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "apscheduler>=3.10.0",
    # Phase 1+ 추가 의존성
    "python-jose[cryptography]>=3.3.0",  # JWT
    "passlib[bcrypt]>=1.7.4",            # 비밀번호 해시
    "python-multipart>=0.0.9",           # 파일 업로드
    "aiosmtplib>=3.0.0",                 # 비동기 이메일 발송
    "aiofiles>=23.0.0",                  # 비동기 파일 I/O
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
